--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
+fastapi~=0.111.1
 uvicorn
-httpx
-sqlalchemy
-databases
-pydantic
-pytest
+httpx~=0.27.0
+sqlalchemy~=2.0.31
+databases~=0.9.0
+pydantic~=2.8.2
+pytest~=8.3.1
 pytest-asyncio
-alembic
-
+alembic~=1.13.2
+asynctest~=0.13.0
