--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,20 @@ services:
     command: >
       bash -c "alembic upgrade head &&
                uvicorn main:app --host 0.0.0.0 --port 8000"
+
+  test:
+    build: .
+    volumes:
+      - .:/app
+    depends_on:
+      - web
+    command: pytest
+
+  coverage:
+    build: .
+    volumes:
+      - .:/app
+    depends_on:
+      - web
+    command: >
+      bash -c "pytest --cov=. --cov-report=html"
