--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 pytest==8.3.1
+pytest-cov==5.0.0
 pytest-asyncio==0.23.8
 pytest-mock==3.14.0
 python-dotenv==1.0.1
