--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       bash -c "alembic upgrade head &&
                uvicorn main:app --host 0.0.0.0 --port 8000"
 
-  test:
+  tests:
     build: .
     volumes:
       - .:/app
