--- a/requirements.txt
+++ b/requirements.txt
@@ -26,12 +26,13 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 packaging==24.1
 pluggy==1.5.0
+psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 pytest==8.3.1
-pytest-cov==5.0.0
 pytest-asyncio==0.23.8
+pytest-cov==5.0.0
 pytest-mock==3.14.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
