--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -20,7 +18,7 @@ services:
       - .:/app
     depends_on:
       - web
-    command: pytest
+    command: pytest -p no:warnings
 
   coverage:
     build: .
@@ -29,4 +27,4 @@ services:
     depends_on:
       - web
     command: >
-      bash -c "pytest --cov=. --cov-report=html"
+      bash -c "pytest --cov=. --cov-report=html -p no:warnings"
